[package]
authors = ["ustulation <ustulation@gmail.com>"]
description = "NAT Traversal for P2P communication"
documentation = "https://docs.rs/p2p/"
license = "GPL-3.0"
name = "p2p"
readme = "README.md"
repository = "https://github.com/ustulation/p2p"
version = "0.4.6"

[[example]]
name = "peer"
required-features = ["socket-collection/enable-udt"]

[dependencies]
bincode = "~0.8.0"
byteorder = "~1.1.0"
log = "~0.3.8"
mio = "~0.6.9"
net2 = "~0.2.30"
quick-error = "~1.2.0"
rand = "~0.3.16"
rust_sodium = "~0.5.0"
serde = "~1.0.11"
serde_derive = "~1.0.11"

[dependencies.socket-collection]
git = "https://github.com/ustulation/socket-collection"
rev = "599e7d3"

[dev-dependencies]
env_logger = "~0.5.13"
maidsafe_utilities = "~0.15.0"
serde_json = "~1.0.2"
unwrap = "~1.1.0"
